--- a/src/app/pages/administrator/events-administrator/events-administrator.component.css
+++ b/src/app/pages/administrator/events-administrator/events-administrator.component.css
@@ -1,3 +1,7 @@
 table.dataTable.dtr-inline.collapsed > tbody > tr[role="row"] > td:first-child:before, table.dataTable.dtr-inline.collapsed > tbody > tr[role="row"] > th:first-child:before {
     top: 40%;
 }
+
+.description-column{
+    white-space: nowrap;
+}
