--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -14,6 +14,9 @@
                                 </div>
                                 <div *ngIf="event.price!=0" class="ribbon ribbon-bottom-right">
                                     <span>{{event.price}} €</span>
+                                </div>
+                                <div *ngIf="event.entries!=''" class="entries entries-bottom-right">
+                                    <span>{{'event.entries'|translate}}</span>
                                 </div>                                
                                 <div *ngIf="!event.showCollapse" class="card-block">
                                     <!-- Date/Time -->
