--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -10,14 +10,18 @@
                         <ng-container *ngFor="let event of events let i=index;">
                             <article *ngIf="minSize<=i && maxSize>=i && event.visible" [hidden]="event.showAll" class="card panel ks-widget ks-widget-post">
                                 <div *ngIf="event.price===0" class="ribbon-free ribbon-bottom-right">
-                                    <span>{{'event.free'|translate}} </span>
+                                    <span class="span-price">{{'event.free'|translate}} </span>
+                                    <a *ngIf="event.entries!=''" href="javascript:void(0);" (click)="externalLink(event.entries)" target="_blank"><span class="span-entries">{{'event.entries'|translate}}</span></a>
                                 </div>
                                 <div *ngIf="event.price!=0" class="ribbon ribbon-bottom-right">
-                                    <span>{{event.price}} €</span>
+                                    <span class="span-price">{{event.price}} €</span>
+                                    <a *ngIf="event.entries!=''" href="javascript:void(0);" (click)="externalLink(event.entries)" target="_blank"><span class="span-entries">{{'event.entries'|translate}}</span></a>
                                 </div>
+                                <!--
                                 <div *ngIf="event.entries!=''" class="entries entries-bottom-right">
                                     <span>{{'event.entries'|translate}}</span>
-                                </div>                                
+                                </div>    
+                                -->                     
                                 <div *ngIf="!event.showCollapse" class="card-block">
                                     <!-- Date/Time -->
                                     <div class="event-datetime">
