--- a/src/app/pages/administrator/users-administrator/users-administrator.component.html
+++ b/src/app/pages/administrator/users-administrator/users-administrator.component.html
@@ -17,6 +17,7 @@
               <th translate>{{'auth-form.email'}}</th>
               <th translate>{{'auth-form.about-yourself'}}</th>
               <th translate>{{'auth-form.privacity-consent'}}</th>
+              <th translate>{{'auth-form.use-consent'}}</th>
               <th translate>{{'crud.edit-delete'}}</th>
             </tr>
           </thead>
@@ -40,7 +41,9 @@
               <!--About Yourself-->
               <td>{{ user | translateLanguage:'aboutYourself':localizeService.parser.currentLang }}</td> 
               <!--Privacity consent-->
-              <td>{{ user.privacityConsent}}</td>   
+              <td>{{ user.privacityConsent}}</td> 
+              <!--Use consent-->
+              <td>{{ user.useConsent}}</td>   
               <!--Edit/Delete-->      
               <td class="ks-status">
                 <a href="javascript:void(0)" (click)="userEditClick(user)"><span class="fa fa-edit ks-color-info" translate>{{'crud.edit'}}</span></a>
