--- a/src/app/pages/event/see-event/see-event.component.html
+++ b/src/app/pages/event/see-event/see-event.component.html
@@ -80,9 +80,9 @@
                       <li class="reaction reaction-telegram" data-reaction="Telegram">
                         <share-button [url]="currentUrl" theme="circles-dark" button="telegram" [size]="1"></share-button>
                       </li>
-                      <li class="reaction reaction-pinterest" data-reaction="Pinterest">
+                      <!--<li class="reaction reaction-pinterest" data-reaction="Pinterest">
                         <share-button [url]="currentUrl" theme="circles-dark" button="pinterest" [size]="1"></share-button>
-                      </li>
+                      </li>-->
                     </ul>
                     </span>
                   </div>
