--- a/src/app/pages/event/see-event/see-event.component.html
+++ b/src/app/pages/event/see-event/see-event.component.html
@@ -63,7 +63,7 @@
                     <!-- Default like button emotion-->
                     <span class="ks-icon" translate>{{'event.share'}}</span>
                     <!-- Default like button text,(Like, wow, sad..) default:Like  -->
-                    <ul class="reactions-box">
+                    <ul class="share-box">
                       <!-- Reaction buttons container-->
                       <li class="reaction reaction-facebook" data-reaction="Facebook">
                         <share-button [url]="currentUrl" theme="circles-dark" button="facebook" [size]="1"></share-button>
